# data_test

./: .gitignore  README.md  cloudwatch.tf  codebuild.tf  iam.tf  main.tf  pyproject.toml  s3.tf  secrets.tf  ses.tf  variables.tf
.github/workflows/: TERRAFORM-DEV.yml
buildspec/: buildspec-integration.yml
environments/: dev.tfvars
requirements/: integration_requirements.txt
src/: __init__.py
src/integration/: test_integration.py
src/util/: __init__.py  extract_file.py  extract_snowflake.py  report_testing.py
tf_backend/: dynamo_db.tf  s3.tf  variables.tf
