[tool.poetry]
name = "data-test"
version = "1.1.1"
description = "manage dependencies"
authors = ["Trung Nguyen <trung191997@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
snowflake-connector-python = "*"
pytest-cov = "*"
pytest = "*"
junit2html = "*"

[tool.poetry.dev-dependencies]
boto3 = "*"
